# transfer-cli

./: .gitignore  .travis.yml  Cargo.toml  README.md
ci/: before_deploy.sh
src/: cli.rs  crypto.rs  errors.rs  main.rs
