[package]
name = "transfer"
version = "0.1.1"
authors = ["James Kominick <james.kominick@gmail.com>"]

[dependencies]
clap = "2"
error-chain = "0.11"
reqwest = "0.7"
ring = "0.12"
rpassword = "1"
hex = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
pbr = "1"
self_update = { version = "0.4", optional = true }


[features]
default = []
update = ["self_update"]

