[package]
name = "transfer"
version = "0.2.0"
authors = ["James Kominick <james.kominick@gmail.com>"]

[dependencies]
clap = "2"
error-chain = "0.11"
reqwest = "0.9"
ring = "0.14"
rpassword = "1"
hex = "0.2"
base64 = "0.10"
serde = "1"
serde_derive = "1"
serde_json = "1"
pbr = "1"
self_update = { version = "0.5", optional = true }


[features]
default = []
update = ["self_update"]

