[package]
name = "transfer"
version = "0.2.2"
authors = ["James Kominick <james@kominick.com>"]
edition = "2018"

[dependencies]
clap = "2"
error-chain = "0.12"
reqwest = "0.9"
ring = "0.16"
rpassword = "3"
hex = "0.3"
base64 = "0.10"
serde = "1"
serde_derive = "1"
serde_json = "1"
pbr = "1"
self_update = { version = "0.5", optional = true }


[features]
default = []
update = ["self_update"]

